--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,12 @@
     tools:context=".MainActivity">
 
 
-    <ImageButton
-        android:id="@+id/bt"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:src="@drawable/noa_background"
-        android:background="#00ff0000"
-        android:scaleType="fitCenter"
-        android:text="CLICK"/>
 
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="text" />
+        android:text="음성 인식한 단어" />
 
     <WebView
         android:id="@+id/webView"
@@ -31,8 +22,18 @@
     <Button
         android:id="@+id/bt_reload"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="50dp"
         android:text="reload"/>
+
+    <ImageButton
+        android:id="@+id/bt"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:src="@drawable/noa_background"
+        android:background="#00ff0000"
+        android:scaleType="fitCenter"
+        android:text="CLICK"/>
 
 
 </LinearLayout>
