--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,46 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+        <!--android:orientation="horizontal"-->
+        <!--<EditText-->
+            <!--android:layout_width="100dp"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:text="ip주소"-->
+            <!--android:layout_margin="5dp"/>-->
+        <!--<EditText-->
+            <!--android:layout_width="100dp"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:text="포트번호"-->
+            <!--android:layout_margin="5dp"/>-->
+        <!--<Button-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:text="확인"-->
+            <!--android:layout_margin="5dp"/>-->
+    <!--</LinearLayout>-->
+
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="음성 인식한 단어" />
+        android:text="음성 인식한 단어"
+        android:layout_margin="2dp"/>
 
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"/>
 
     <Button
         android:id="@+id/bt_reload"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="reload"/>
+        android:text="reload"
+        android:layout_margin="2dp"/>
 
     <ImageButton
         android:id="@+id/bt"
