--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,47 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
-        <!--android:orientation="horizontal"-->
-        <!--<EditText-->
-            <!--android:layout_width="100dp"-->
-            <!--android:layout_height="50dp"-->
-            <!--android:text="ip주소"-->
-            <!--android:layout_margin="5dp"/>-->
-        <!--<EditText-->
-            <!--android:layout_width="100dp"-->
-            <!--android:layout_height="50dp"-->
-            <!--android:text="포트번호"-->
-            <!--android:layout_margin="5dp"/>-->
-        <!--<Button-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="50dp"-->
-            <!--android:text="확인"-->
-            <!--android:layout_margin="5dp"/>-->
-    <!--</LinearLayout>-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        android:orientation="horizontal"
+        <EditText
+            android:id="@+id/text_url"
+            android:layout_width="160sp"
+            android:layout_height="match_parent"
+            android:text="192.168."
+            android:layout_margin="2dp"/>
+        <EditText
+            android:id="@+id/text_server"
+            android:layout_width="60sp"
+            android:layout_height="match_parent"
+            android:text="8080"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/bt_server"
+            android:layout_width="50sp"
+            android:layout_height="match_parent"
+            android:text="확인"
+            android:layout_margin="2dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        android:orientation="horizontal"
+        <EditText
+            android:id="@+id/text_ros"
+            android:layout_width="60sp"
+            android:layout_height="match_parent"
+            android:text="9091"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/bt_ros"
+            android:layout_width="50sp"
+            android:layout_height="match_parent"
+            android:text="확인"
+            android:layout_margin="2dp"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv"
