--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,66 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/bt_osaka"
+            android:layout_width="40pt"
+            android:layout_height="50dp"
+            android:text="오사카"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/bt_cu"
+            android:layout_width="40pt"
+            android:layout_height="50dp"
+            android:text="CU"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/bt_lalavla"
+            android:layout_width="40pt"
+            android:layout_height="50dp"
+            android:text="랄라"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/bt_chicken"
+            android:layout_width="40pt"
+            android:layout_height="50dp"
+            android:text="고찜"
+            android:layout_margin="2dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/bt_superstar"
+            android:layout_width="40pt"
+            android:layout_height="50dp"
+            android:text="노래"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/bt_cross"
+            android:layout_width="40pt"
+            android:layout_height="50dp"
+            android:text="약사"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/bt_tomandtoms"
+            android:layout_width="40pt"
+            android:layout_height="50dp"
+            android:text="탐탐"
+            android:layout_margin="2dp"/>
+        <Button
+            android:id="@+id/bt_busstop"
+            android:layout_width="40pt"
+            android:layout_height="50dp"
+            android:text="908"
+            android:layout_margin="2dp"/>
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
